--- a/PinkPongKiosk/app/src/main/AndroidManifest.xml
+++ b/PinkPongKiosk/app/src/main/AndroidManifest.xml
@@ -9,11 +9,19 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".KioskActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data
+                    android:host="com.bignerdranch.android.pinkpongkiosk"
+                    android:scheme="app" />
             </intent-filter>
         </activity>
     </application>
