--- a/PinkPongKiosk/app/src/main/AndroidManifest.xml
+++ b/PinkPongKiosk/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
             android:name=".KioskActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask" >
+        </activity>
+        <activity
+            android:name=".MatchListActivity"
+            android:label="@string/title_activity_match_list" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
