--- a/PinkPongKiosk/app/src/main/AndroidManifest.xml
+++ b/PinkPongKiosk/app/src/main/AndroidManifest.xml
@@ -23,6 +23,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".PaddleRegistrationActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTask" >
+        </activity>
     </application>
 
 </manifest>
