--- a/PinkPongKiosk/app/src/main/AndroidManifest.xml
+++ b/PinkPongKiosk/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         <activity
             android:name=".PaddleRegistrationActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTask" >
+            android:launchMode="singleTask"
+            android:noHistory="true" >
         </activity>
     </application>
 
