--- a/PinkPongKiosk/app/build.gradle
+++ b/PinkPongKiosk/app/build.gradle
@@ -25,4 +25,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:21.+'
     compile 'com.android.support:recyclerview-v7:21.0.3'
     compile 'de.hdodenhof:circleimageview:1.2.2'
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.squareup.okhttp:okhttp:2.2.0'
+    compile 'com.google.code.gson:gson:2.3.1'
 }
