--- a/PinkPongKiosk/app/build.gradle
+++ b/PinkPongKiosk/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp:2.2.0'
     compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.squareup.picasso:picasso:2.5.0'
 }
