--- a/PinkPongKiosk/app/build.gradle
+++ b/PinkPongKiosk/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.2.0'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.squareup.picasso:picasso:2.5.0'
+    compile 'joda-time:joda-time:2.7'
 }
