--- a/PinkPongKiosk/app/src/main/AndroidManifest.xml
+++ b/PinkPongKiosk/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         <activity
             android:name=".KioskActivity"
             android:label="@string/app_name"
+            android:noHistory="true"
             android:launchMode="singleTask" >
         </activity>
         <activity
